--- a/foodie/Base.lproj/Main.storyboard
+++ b/foodie/Base.lproj/Main.storyboard
@@ -13,21 +13,19 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="foodie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="foodie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Asset 1" translatesAutoresizingMaskIntoConstraints="NO" id="oqj-PK-egE">
-                                <rect key="frame" x="87" y="126" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEV-EH-sDu">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEV-EH-sDu">
                                 <rect key="frame" x="126" y="309" width="163" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="zDn-c8-e1s"/>
+                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Random">
+                                <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -35,43 +33,27 @@
                                         <integer key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
-                            </button>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aZG-iF-CCj">
-                                <rect key="frame" x="0.0" y="646" width="414" height="250"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
-                                    <segue destination="YFA-AX-DNe" kind="embed" id="Pmb-eK-G6x"/>
+                                    <action selector="getRestaurantInformation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9tF-CQ-dff"/>
+                                </connections>
+                            </button>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aZG-iF-CCj">
+                                <rect key="frame" x="0.0" y="518" width="414" height="378"/>
+                                <connections>
+                                    <segue destination="YFA-AX-DNe" kind="embed" identifier="segue" id="Pmb-eK-G6x"/>
                                 </connections>
                             </containerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WLr-EW-jq2">
-                                <rect key="frame" x="50" y="373" width="314" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOi-Be-UEg">
-                                <rect key="frame" x="50" y="464" width="314" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rom-1A-GeI">
-                                <rect key="frame" x="50" y="509" width="314" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNE-xY-kpn">
-                                <rect key="frame" x="50" y="588" width="314" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="aZG-iF-CCj" secondAttribute="bottom" id="1ya-NG-dNW"/>
+                            <constraint firstItem="aZG-iF-CCj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2uY-3K-FDO"/>
+                            <constraint firstAttribute="trailing" secondItem="aZG-iF-CCj" secondAttribute="trailing" id="G0z-LA-aPQ"/>
+                            <constraint firstItem="aZG-iF-CCj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="518" id="KXi-zg-ZBD"/>
+                            <constraint firstItem="QEV-EH-sDu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="265" id="QW5-vf-b4b"/>
+                            <constraint firstItem="QEV-EH-sDu" firstAttribute="centerX" secondItem="aZG-iF-CCj" secondAttribute="centerX" id="hhM-Hd-Tsv"/>
+                            <constraint firstItem="QEV-EH-sDu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="wXn-yS-mqT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -85,27 +67,88 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="67.633928571428569"/>
         </scene>
-        <!--View Controller-->
+        <!--Container View-->
         <scene sceneID="7m1-3O-dAc">
             <objects>
-                <viewController id="YFA-AX-DNe" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ContainerView" id="YFA-AX-DNe" customClass="ContainerView" customModule="foodie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oaA-Qd-e6K">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="378"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WLr-EW-jq2">
+                                <rect key="frame" x="50" y="97" width="314" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="iqO-mC-dS5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOi-Be-UEg">
+                                <rect key="frame" x="50" y="145" width="314" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="08H-QT-Gsw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rom-1A-GeI">
+                                <rect key="frame" x="50" y="193" width="314" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="xCY-jc-16u"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNE-xY-kpn">
+                                <rect key="frame" x="50" y="241" width="314" height="40"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmc-Jd-KUh">
+                                <rect key="frame" x="20" y="44" width="122" height="23"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="WLr-EW-jq2" firstAttribute="leading" secondItem="at6-wl-kah" secondAttribute="leading" constant="50" id="2hu-O0-Dx3"/>
+                            <constraint firstItem="gOi-Be-UEg" firstAttribute="trailing" secondItem="Rom-1A-GeI" secondAttribute="trailing" id="2o8-3h-1AV"/>
+                            <constraint firstItem="gOi-Be-UEg" firstAttribute="leading" secondItem="Rom-1A-GeI" secondAttribute="leading" id="36N-kF-emV"/>
+                            <constraint firstItem="gOi-Be-UEg" firstAttribute="top" secondItem="WLr-EW-jq2" secondAttribute="bottom" constant="8" symbolic="YES" id="c7f-Ce-WiN"/>
+                            <constraint firstItem="WLr-EW-jq2" firstAttribute="top" secondItem="at6-wl-kah" secondAttribute="top" constant="53" id="fRB-SS-lIh"/>
+                            <constraint firstItem="WLr-EW-jq2" firstAttribute="centerX" secondItem="oaA-Qd-e6K" secondAttribute="centerX" id="gFu-rt-qEd"/>
+                            <constraint firstItem="Rom-1A-GeI" firstAttribute="trailing" secondItem="vNE-xY-kpn" secondAttribute="trailing" id="pc8-6i-ed1"/>
+                            <constraint firstItem="WLr-EW-jq2" firstAttribute="leading" secondItem="gOi-Be-UEg" secondAttribute="leading" id="tAi-D4-KHj"/>
+                            <constraint firstItem="at6-wl-kah" firstAttribute="bottom" secondItem="vNE-xY-kpn" secondAttribute="bottom" constant="63" id="ulb-Gw-6us"/>
+                            <constraint firstItem="Rom-1A-GeI" firstAttribute="top" secondItem="gOi-Be-UEg" secondAttribute="bottom" constant="8" symbolic="YES" id="w4g-Fs-WZs"/>
+                            <constraint firstItem="vNE-xY-kpn" firstAttribute="top" secondItem="Rom-1A-GeI" secondAttribute="bottom" constant="8" symbolic="YES" id="wTf-ue-acD"/>
+                            <constraint firstItem="WLr-EW-jq2" firstAttribute="trailing" secondItem="gOi-Be-UEg" secondAttribute="trailing" id="wyz-T8-CBa"/>
+                            <constraint firstItem="Rom-1A-GeI" firstAttribute="leading" secondItem="vNE-xY-kpn" secondAttribute="leading" id="xai-9b-DsL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="at6-wl-kah"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="10"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="addressOfRestaurant" destination="gOi-Be-UEg" id="W3r-Ub-0gy"/>
+                        <outlet property="menuURLOfRestaurant" destination="vNE-xY-kpn" id="5YU-yk-ag9"/>
+                        <outlet property="nameOfRestaurant" destination="WLr-EW-jq2" id="1Ci-s7-Pgb"/>
+                        <outlet property="urlOfRestaurant" destination="Rom-1A-GeI" id="Bfd-q6-Okj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6E-39-sNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="986" y="232"/>
+            <point key="canvasLocation" x="1000.0000000000001" y="213.61607142857142"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Asset 1" width="399" height="385.5"/>
-    </resources>
 </document>
